@@ -28,8 +28,11 @@ public class CreateAuthenticatorAndAddNonResidentKeyTest {
                     + "hk1Dwkf0v18GZca1DMF3SaJ9HPdmShRANCAASNYX5lyVCOZLzFZzrIKmeZ2jwU"
                     + "RmgsJYxGP__fWN_S-j5sN4tT15XEpN_7QZnt14YvI6uvAgO0uJEboFaZlOEB";
 
+    // Decode a Base64-encoded EC256 private key string and create a PKCS8EncodedKeySpec
+    // This key is used for signing WebAuthn credentials in virtual authenticator tests
     private final static PKCS8EncodedKeySpec ec256PrivateKey =
             new PKCS8EncodedKeySpec(Base64.getUrlDecoder().decode(base64EncodedEC256PK));
+
 
     @BeforeMethod
     public void setUp() {
@@ -41,22 +44,32 @@ public class CreateAuthenticatorAndAddNonResidentKeyTest {
     public void testCreateAuthenticatorAndAddNonResidentKey() {
         int expectedCredentialSet = 1;
 
+        // Configure a virtual authenticator using U2F protocol without resident key support
         VirtualAuthenticatorOptions options = new VirtualAuthenticatorOptions()
                 .setProtocol(VirtualAuthenticatorOptions.Protocol.U2F)
                 .setHasResidentKey(false);
 
+        // Add the configured virtual authenticator to the browser session
         VirtualAuthenticator virtualAuthenticator = ((HasVirtualAuthenticator) driver).addVirtualAuthenticator(options);
 
+        // Define credential ID for the non-resident credential
         byte[] credentialId = {1, 2, 3, 4};
+
+        // Create a non-resident credential with the given ID, RP, and private key
         Credential nonResidentCredential = Credential.createNonResidentCredential(
                 credentialId, "localhost", ec256PrivateKey, 0);
 
+        // Add the non-resident credential to the virtual authenticator
         virtualAuthenticator.addCredential(nonResidentCredential);
 
+        // Retrieve all credentials stored in the authenticator
         List<Credential> credentialList = virtualAuthenticator.getCredentials();
+
+        // Verify that exactly one credential is present
         Assert.assertEquals(credentialList.size(), expectedCredentialSet);
 
-        Credential credential = credentialList.get(0);
+        // Validate that the stored credential ID matches the expected ID
+        Credential credential = credentialList.getFirst();
         Assert.assertEquals(credential.getId(), credentialId);
     }
 
